# PortSDR

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CheckVersion.cmake  DependencyManager.cmake
cmake/modules/: FindAIRSPY.cmake  FindAIRSPYHF.cmake  FindLIBAIRSPY.cmake  FindLIBAIRSPYHF.cmake  FindLIBUSB.cmake  FindLibUSB.cmake  FindRTLSDR.cmake  Findrtlsdr.cmake
cmake/vendors/: CheckAirSpy.cmake  CheckRTL.cmake
include/: AirSpy.h  Device.h  Error.h  Host.h  HostType.h  PortSDR.h  RTLSDR.h  Ranges.h  Stream.h
include/vendors/: AirSpy.h  AirSpyHf.h  RTLSDR.h
src/: CMakeLists.txt  Host.h  IQConverter.cpp  PortSDR.cpp  PortSDRVersion.cpp.in  Utils.h
src/vendors/: AirSpy.cpp  AirSpy.h  AirSpyHf.cpp  AirSpyHf.h  RTLSDR.cpp  RTLSDR.h
tests/: AnyTests.cpp  CMakeLists.txt
tests/vendors/: AirSpy.cpp  RTLSDR.cpp
